--- a/parameters_load.yml
+++ b/parameters_load.yml
@@ -5,17 +5,17 @@
 
                                             # simulation parameters
 burnin: 0                                   # days to wait before logging output 
-endDay: 3650                               # number of days to simulate (was 14600, 3650)
+endDay: 3650                                # number of days to simulate (was 14600, 3650)
 printStep: 10                               # print to out.timeseries every X days
 tipSamplingStartDay: 2000					# day to start sampling for tree (wait a little while or will get basal multifurfaction at t = 0)
-tipSamplingEndDay: 3450                    # day to stop sampling for tree (was 14200, 3450)
-tipSamplingRate: 0.00125                     # store X samples per deme per day
-tipSamplesPerDeme: 600                     # cap number of samples per deme
+tipSamplingEndDay: 3450                     # day to stop sampling for tree (was 14200, 3450)
+tipSamplingRate: 0.00125                    # store X samples per deme per day
+tipSamplesPerDeme: 600                      # cap number of samples per deme
 tipSamplingProportional: true               # whether to sample proportional to prevalence (if multiple demes)
-treeProportion: 0.01                         # proportion of tips to use in tree reconstruction
-diversitySamplingCount: 100                # how many samples to draw to calculate diversity, netau and serial interval (1000)
+treeProportion: 0.01                        # proportion of tips to use in tree reconstruction
+diversitySamplingCount: 100                 # how many samples to draw to calculate diversity, netau and serial interval (1000)
 netauWindow: 100                            # window in days to calculate Ne*tau
-repeatSim: false                             # repeat simulation until endDay is reached?
+repeatSim: false                            # repeat simulation until endDay is reached?
 immunityReconstruction: false               # whether to print immunity reconstruction to out.immunity
 memoryProfiling: false                      # requires -javaagent:classmexer.jar to run (not recommended)
 yearsFromMK: 1.0                            # how many years to consider present when calculating MK (I never used this)
@@ -29,7 +29,7 @@ printFitSamplesStep: 1000                   # print out viral fitness samples ev
                                             # metapopulation parameters
 demeCount: 1                                # number of demes
 demeNames: ["tropics"]                      # deme names
-initialNs: [40000]                           # inital deme population sizes (40000000)
+initialNs: [40000000]                           # inital deme population sizes (40000000)
     
                                             # host parameters   
 birthRate: 0.000091                         # in births per individual per day, 1/30 years = 0.000091
@@ -37,21 +37,21 @@ deathRate: 0.000091                         # in deaths per individual per day, 
 swapDemography: true                        # whether to keep overall population size constant
 
                                             # epidemiological parameters    
-initialI: 740                               # in individuals (7406)
+initialI: 7406                              # in individuals (7406)
 initialDeme: 1                              # index of deme where infection starts, 1..n
-initialPrR: 0.5088                           # proportion with prior immunity to initial strain (.5088)
-beta: 0.5627                                  # in contacts per individual per day
-nu: 0.25                                     # in recoveries per individual per day
+initialPrR: 0.5088                          # proportion with prior immunity to initial strain (.5088)
+beta: 0.5627                                # in contacts per individual per day
+nu: 0.25                                    # in recoveries per individual per day
 betweenDemePro: 0.0000                      # relative to within-deme beta
-externalMigration: 200.0                     # as number of additional infections in force of infection
+externalMigration: 200.0                    # as number of additional infections in force of infection
 
                                             # transcendental parameters
-transcendental: false                        # whether to include a general recovered class
+transcendental: false                       # whether to include a general recovered class
 immunityLoss: 0.0                           # in R->S per individual per day
 initialPrT: 0.0                             # initial faction in general recovered class
 
 backgroundImmunity: false                   # everyone in population starts with some immunity to current strain (not recommended)
-backgroundDistance: 0.2                    # distance of background immunity from initial strain (not recommended)
+backgroundDistance: 0.2                     # distance of background immunity from initial strain (not recommended)
         
                                             # seasonal parameters           
 demeBaselines: [1.]                         # baseline of seasonality
