--- a/parameters_load.yml
+++ b/parameters_load.yml
@@ -13,7 +13,7 @@ tipSamplingRate: 0.00125                    # store X samples per deme per day
 tipSamplesPerDeme: 600                      # cap number of samples per deme
 tipSamplingProportional: true               # whether to sample proportional to prevalence (if multiple demes)
 treeProportion: 0.01                        # proportion of tips to use in tree reconstruction
-diversitySamplingCount: 100                 # how many samples to draw to calculate diversity, netau and serial interval (1000)
+diversitySamplingCount: 10000                 # how many samples to draw to calculate diversity, netau and serial interval (1000)
 netauWindow: 100                            # window in days to calculate Ne*tau
 repeatSim: false                            # repeat simulation until endDay is reached?
 immunityReconstruction: false               # whether to print immunity reconstruction to out.immunity
@@ -28,8 +28,8 @@ printFitSamplesStep: 1000                   # print out viral fitness samples ev
 
                                             # metapopulation parameters
 demeCount: 1                                # number of demes
-demeNames: ["north"]                      # deme names
-initialNs: [40000000]                           # inital deme population sizes (40000000)
+demeNames: ["tropics"]                      # deme names
+initialNs: [400000]                           # inital deme population sizes (40000000)
     
                                             # host parameters   
 birthRate: 0.000091                         # in births per individual per day, 1/30 years = 0.000091
@@ -37,7 +37,7 @@ deathRate: 0.000091                         # in deaths per individual per day, 
 swapDemography: true                        # whether to keep overall population size constant
 
                                             # epidemiological parameters    
-initialI: 7406                              # in individuals (7406)
+initialI: 70                              # in individuals (7406)
 initialDeme: 1                              # index of deme where infection starts, 1..n
 initialPrR: 0.5088                          # proportion with prior immunity to initial strain (.5088)
 beta: 0.5627                                # in contacts per individual per day
@@ -55,7 +55,7 @@ backgroundDistance: 0.2                     # distance of background immunity fr
         
                                             # seasonal parameters           
 demeBaselines: [1.]                         # baseline of seasonality
-demeAmplitudes: [0.1]                       # amplitude of seasonality
+demeAmplitudes: [0.0]                       # amplitude of seasonality
 demeOffsets: [0.]                           # seasonal offset relative to the year
     
                                             # phenotype parameters  
