--- a/parameters_tropics.yml
+++ b/parameters_tropics.yml
@@ -4,11 +4,11 @@
 # Leaving an entry out is fine, the value will remain at its default.
 
                                             # simulation parameters
-burnin: 730                                    # days to wait before logging output 
-endDay: 14600                                # number of days to simulate (was 14600, 3650)
+burnin: 1825                                   # days to wait before logging output 
+endDay: 10950                                # number of days to simulate (was 14600, 3650)
 printStep: 10                               # print to out.timeseries every X days
 tipSamplingStartDay: 2000					# day to start sampling for tree (wait a little while or will get basal multifurfaction at t = 0)
-tipSamplingEndDay: 14200                     # day to stop sampling for tree (was 14200, 3450)
+tipSamplingEndDay: 10900                     # day to stop sampling for tree (was 14200, 3450)
 tipSamplingRate: 0.00125                    # store X samples per deme per day
 tipSamplesPerDeme: 600                      # cap number of samples per deme
 tipSamplingProportional: true               # whether to sample proportional to prevalence (if multiple demes)
@@ -29,7 +29,7 @@ printFitSamplesStep: 1000                   # print out viral fitness samples ev
                                             # metapopulation parameters
 demeCount: 1                                # number of demes
 demeNames: ["tropics"]                      # deme names
-initialNs: [40000000]                           # inital deme population sizes (40000000)
+initialNs: [400000]                           # inital deme population sizes (40000000)
     
                                             # host parameters   
 birthRate: 0.000091                         # in births per individual per day, 1/30 years = 0.000091
@@ -37,7 +37,7 @@ deathRate: 0.000091                         # in deaths per individual per day, 
 swapDemography: true                        # whether to keep overall population size constant
 
                                             # epidemiological parameters    
-initialI: 7406                              # in individuals (7406)
+initialI: 74                              # in individuals (7406)
 initialDeme: 1                              # index of deme where infection starts, 1..n
 initialPrR: 0.5088                          # proportion with prior immunity to initial strain (.5088)
 beta: 0.5627                                # in contacts per individual per day
